--- a/web/index.html
+++ b/web/index.html
@@ -12,7 +12,7 @@
 
 <body>
 
-<h1>Tables de multiplication</h1>
+<h1>Magie des tables de multiplication</h1>
 
 <div id="container">
     <canvas id="canvas" width="300" height="300" class="center"></canvas>
@@ -22,21 +22,6 @@
     </form>
     <br/>
 </div>
-<footer class="site-footer">
-    <div class="footer-col-wrapper">
-        <div class="footer-col footer-col-1">
-            Dévelopé par <a href="http://nicolas.hefti.fr">Nicolas Hefti</a>
-        </div>
-        <div class="footer-col footer-col-2">
-            <a href="https://twitter.com/nicolashefti">@nicolashefti</a>
-
-        </div>
-        <div class="footer-col footer-col-3">
-            Un projet inspiré par la video de <a href="#">Mickael XXX</a>. L'application est dévelopée en Dart. Son code
-            est mis à disposition sur Github.
-        </div>
-    </div>
-</footer>
 
 <script type="application/dart" src="main.dart"></script>
 <script data-pub-inline src="packages/browser/dart.js"></script>
